# dual-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  build.sbt  configuration.yaml  rust-syntax.md
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20251111004512_create_subscriptions_table.sql
rust-src/: greet.rs  main.rs
rust-version/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
rust-version/src/routes/: greets.rs  health_check.rs  subscriptions.rs
rust-version/tests/: health_check.rs
scala-src/main/scala/: Main.scala
scala-version/src/main/scala/: Main.scala
scripts/: init_db.sh
