[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zero2prod"
path = "rust-src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
const_format = "0.2"  # For compile-time string composition

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
